[gd_scene load_steps=17 format=3 uid="uid://cbux1ru8sayld"]

[ext_resource type="FontFile" uid="uid://csi8hv8ntqjw2" path="res://Assets/UI/Fonts/BKShatteredScore.ttf" id="1_orlhv"]
[ext_resource type="Script" path="res://Scripts/levels.gd" id="1_xgohk"]
[ext_resource type="Texture2D" uid="uid://xq06xkjej08j" path="res://Assets/Characters/main/arrow.png" id="3_sp35l"]

[sub_resource type="SpriteFrames" id="SpriteFrames_cgyec"]

[sub_resource type="LabelSettings" id="LabelSettings_3oi5t"]
font = ExtResource("1_orlhv")
font_size = 100

[sub_resource type="AtlasTexture" id="AtlasTexture_jb2hm"]
atlas = ExtResource("3_sp35l")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4nup"]
atlas = ExtResource("3_sp35l")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgi7t"]
atlas = ExtResource("3_sp35l")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0l3fd"]
atlas = ExtResource("3_sp35l")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fur17"]
atlas = ExtResource("3_sp35l")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ktvi"]
atlas = ExtResource("3_sp35l")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ei22u"]
atlas = ExtResource("3_sp35l")
region = Rect2(600, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_xvbk2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jb2hm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4nup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgi7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0l3fd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fur17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ktvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ei22u")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_v0l25"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_14hty"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0a64b"]
_data = {
"RESET": SubResource("Animation_v0l25"),
"fade": SubResource("Animation_14hty")
}

[node name="Levels" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
script = ExtResource("1_xgohk")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00173611
anchor_top = 0.0277778
anchor_right = 0.998264
anchor_bottom = 1.02778
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -100

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PanelContainer/MarginContainer/VBoxContainer"]
position = Vector2(1, 85)
sprite_frames = SubResource("SpriteFrames_cgyec")

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/AnimatedSprite2D"]
offset_left = 398.0
offset_right = 754.0
offset_bottom = 94.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "LEVELS"
label_settings = SubResource("LabelSettings_3oi5t")
horizontal_alignment = 1
vertical_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="lvl1" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_orlhv")
theme_override_font_sizes/font_size = 70
text = " 1 "

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="lvl2" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_orlhv")
theme_override_font_sizes/font_size = 70
text = " 2 "

[node name="VBoxContainer3" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="lvl3" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_orlhv")
theme_override_font_sizes/font_size = 70
text = " 3 "

[node name="VBoxContainer4" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="lvl4" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_orlhv")
theme_override_font_sizes/font_size = 70
text = " 4 "

[node name="VBoxContainer5" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="lvl5" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer5"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_orlhv")
theme_override_font_sizes/font_size = 70
text = " 5 "

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="PanelContainer/MarginContainer/HBoxContainer"]
position = Vector2(-160, 262)
rotation = -3.13337
sprite_frames = SubResource("SpriteFrames_xvbk2")
autoplay = "default"

[node name="Back" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/AnimatedSprite2D"]
offset_left = -47.8257
offset_top = 21.3941
offset_right = 28.1743
offset_bottom = 71.3941
rotation = 3.13713
theme_override_fonts/font = ExtResource("1_orlhv")
theme_override_font_sizes/font_size = 30
text = "back"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0a64b")
}

[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/lvl1" to="." method="_on_lvl_1_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2/lvl2" to="." method="_on_lvl_2_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer3/lvl3" to="." method="_on_lvl_3_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/AnimatedSprite2D/Back" to="." method="_on_back_pressed"]
